@@ -1,7 +1,8 @@
 Revision history for CatalystX-Eta
 
 {{$NEXT}}
-    - added Catalyst::Controller::REST and Data::Manager to cpanfile
+    - added Catalyst::Controller::REST to cpanfile
+    - added Data::Manager to cpanfile (test dep)
 
 0.042  2015-03-14 16:01:35 BRT
     - Controller::Search now can accept ilike and like filters.
